add one more section

--- a/Fitness2/app/src/main/res/navigation/mobile_navigation.xml
+++ b/Fitness2/app/src/main/res/navigation/mobile_navigation.xml
@@ -22,4 +22,9 @@
         android:name="comp90018.fitness.ui.notifications.NotificationsFragment"
         android:label="@string/title_notifications"
         tools:layout="@layout/fragment_notifications" />
+    <fragment
+        android:id="@+id/training_records"
+        android:name="comp90018.fitness.ui.training_recrods.TrainingRecordsFragment"
+        android:label="@string/title_training_records"
+        tools:layout="@layout/fragment_training_records" />
 </navigation>
