--- a/Fitness2/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/Fitness2/app/src/main/res/menu/bottom_nav_menu.xml
@@ -15,5 +15,9 @@
         android:id="@+id/navigation_notifications"
         android:icon="@drawable/ic_notifications_black_24dp"
         android:title="@string/title_notifications" />
+    <item
+        android:id="@+id/training_records"
+        android:icon="@drawable/ic_notifications_black_24dp"
+        android:title="@string/title_training_records" />
 
 </menu>
