--- a/Fitness2/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/Fitness2/app/src/main/res/menu/bottom_nav_menu.xml
@@ -19,5 +19,9 @@
         android:id="@+id/training_records"
         android:icon="@drawable/ic_notifications_black_24dp"
         android:title="@string/title_training_records" />
+    <item
+        android:id="@+id/map"
+        android:icon="@drawable/ic_baseline_pin_drop_24"
+        android:title="@string/title_find_my_friends" />
 
 </menu>
