--- a/Fitness2/app/src/main/res/navigation/mobile_navigation.xml
+++ b/Fitness2/app/src/main/res/navigation/mobile_navigation.xml
@@ -29,7 +29,7 @@
         tools:layout="@layout/fragment_training_records" />
     <fragment
         android:id="@+id/map"
-        android:name="comp90018.fitness.ui.find_my_friends.findFriendsFragment"
+        android:name="comp90018.fitness.ui.find_my_friends.FindFriendsFragment"
         android:label="@string/title_find_my_friends"
         tools:layout="@layout/fragment_find_friends" />
 </navigation>
