--- a/Fitness2/app/src/main/res/layout/fragment_find_friends.xml
+++ b/Fitness2/app/src/main/res/layout/fragment_find_friends.xml
@@ -55,7 +55,7 @@
         android:id="@+id/map"
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
-        android:layout_height="405dp"
+        android:layout_height="match_parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:context=".ui.find_my_friends.FindFriendsFragment"
         tools:layout_editor_absoluteX="129dp" />
