--- a/Fitness2/app/src/main/res/layout/share_location_list_row_item.xml
+++ b/Fitness2/app/src/main/res/layout/share_location_list_row_item.xml
@@ -7,7 +7,7 @@
         android:layout_rowSpan="1"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:layout_marginLeft="20dp"
+        android:layout_marginLeft="50dp"
         android:scaleType="fitXY"
         android:id="@+id/find_friends_bottom_sheet_avatar"
         android:layout_row="0"
@@ -25,15 +25,16 @@
         android:textColor="#1E90FF"
         android:textSize="20dp" />
 
-    <TextView
+
+    <Button
+        android:id="@+id/shareLocationBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_columnWeight="1"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="10dp"
-        android:textSize="20dp"
-        android:textColor="#4B0082"
-        android:id="@+id/find_friends_bottom_sheet_distance"
         android:layout_row="0"
-        android:layout_column="2" />
+        android:layout_column="2"
+        android:layout_columnWeight="1"
+        android:layout_marginRight="20dp"
+        android:backgroundTint="@color/blue"
+        android:text="Share" />
+
 </GridLayout>
