--- a/Fitness2/app/src/main/res/layout/activity_add_moment.xml
+++ b/Fitness2/app/src/main/res/layout/activity_add_moment.xml
@@ -33,7 +33,8 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/user_name"
             android:textSize="20dp"
-            android:hint="Add a title" />
+            android:hint="Add a title"
+            android:singleLine="true"/>
 
         <EditText
             android:id="@+id/edit_content_edit"
@@ -51,6 +52,7 @@
             android:text="Add Image" />
 
         <HorizontalScrollView
+            android:id="@+id/upload_img_area"
             android:layout_width="match_parent"
             android:layout_height="150dp"
             android:layout_below="@+id/button_choose_image"
@@ -66,7 +68,7 @@
             android:id="@+id/progress_bar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_above="@+id/button_upload"
+            android:layout_below="@+id/upload_img_area"
             style="@style/Widget.AppCompat.ProgressBar.Horizontal"/>
 
 <!--        <TextView-->
@@ -74,13 +76,13 @@
 <!--            android:layout_width="wrap_content"-->
 <!--            android:layout_height="wrap_content"-->
 <!--            android:text="GEO TEST" />-->
-        <Button
-            android:id="@+id/button_upload"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_above="@+id/button_submit"
-            android:layout_centerHorizontal="true"
-            android:text="Upload"/>
+<!--        <Button-->
+<!--            android:id="@+id/button_upload"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_above="@+id/button_submit"-->
+<!--            android:layout_centerHorizontal="true"-->
+<!--            android:text="Upload" />-->
 
         <Button
             android:id="@+id/button_submit"
