--- a/Fitness2/app/src/main/res/layout/activity_main.xml
+++ b/Fitness2/app/src/main/res/layout/activity_main.xml
@@ -23,9 +23,14 @@
         android:id="@+id/addMoment"
         android:layout_width="50dp"
         android:layout_height="50dp"
+        android:background="@drawable/translucent_avatar_button"
         tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="345dp"
-        tools:layout_editor_absoluteY="482dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="70dp"
+        android:layout_marginRight="10dp"
+        android:text="+"
+        android:textSize="20dp"/>
 
     <fragment
         android:id="@+id/nav_host_fragment_activity_main"
