--- a/Fitness2/app/src/main/res/layout/activity_moment_details.xml
+++ b/Fitness2/app/src/main/res/layout/activity_moment_details.xml
@@ -105,7 +105,7 @@
             <LinearLayout
                 android:id="@+id/moment_add_comment"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="40dp"
                 android:layout_below="@+id/moment_detail_comment_num"
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="10dp"
@@ -117,7 +117,7 @@
                     android:inputType="text"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
-                    android:layout_weight="4"
+                    android:layout_weight="5"
                     android:background="@drawable/translucent_avatar"
                     android:hint="Add a comment"
                     android:paddingLeft="10dp" />
@@ -128,7 +128,8 @@
                     android:layout_height="match_parent"
                     android:layout_marginLeft="5dp"
                     android:layout_weight="1"
-                    android:text="Send">
+                    android:backgroundTintMode="multiply"
+                    android:background="@drawable/ic_moments_send">
 
                 </Button>
             </LinearLayout>
