--- a/Fitness2/app/src/main/res/layout/available_friend_list_row_item.xml
+++ b/Fitness2/app/src/main/res/layout/available_friend_list_row_item.xml
@@ -19,7 +19,7 @@
         android:layout_height="wrap_content"
         android:layout_row="0"
         android:layout_column="1"
-        android:layout_columnWeight="2"
+        android:layout_columnWeight="1"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="10dp"
         android:textColor="#1E90FF"
@@ -29,7 +29,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_columnWeight="1"
-        android:layout_marginLeft="30dp"
+        android:layout_marginRight="70dp"
+        android:layout_gravity="right"
         android:layout_marginTop="10dp"
         android:textSize="20dp"
         android:textColor="#4B0082"
