--- a/Fitness2/app/src/main/res/layout/share_location_list_row_item.xml
+++ b/Fitness2/app/src/main/res/layout/share_location_list_row_item.xml
@@ -7,7 +7,7 @@
         android:layout_rowSpan="1"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:layout_marginLeft="50dp"
+        android:layout_marginLeft="30dp"
         android:scaleType="fitXY"
         android:id="@+id/find_friends_bottom_sheet_avatar"
         android:layout_row="0"
@@ -19,7 +19,7 @@
         android:layout_height="wrap_content"
         android:layout_row="0"
         android:layout_column="1"
-        android:layout_columnWeight="2"
+        android:layout_columnWeight="1"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="10dp"
         android:textColor="#1E90FF"
@@ -34,6 +34,7 @@
         android:layout_column="2"
         android:layout_columnWeight="1"
         android:layout_marginRight="20dp"
+        android:layout_gravity="right"
         android:backgroundTint="@color/blue"
         android:text="Share" />
 
